compatibility with rfc7517
